tests/fail/strict_null_identity.stderr
error[E0409]: Cannot initialize variable of type '*Data' with value of type 'null'
 --> tests/fail/strict_null_identity.tk:19:11
   |
 19 |     auto *d: Data = null // EXPECT: error[E0409]:
   |           ^
